--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
       <div class="contact-grid">
         <div class="contact-info">
           <p><i class="fas fa-envelope"></i> fariz.flutterdev@gmail.com</p>
-          <p><i class="fas fa-map-marker-alt"></i> Kerala, India (Moving to UAE soon)</p>
+          <p><i class="fas fa-map-marker-alt"></i> Kerala, India </p>
           <div class="social-links">
             <a href="https://github.com/farizworks" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/fariz-thiruthi-247b851aa" target="_blank"><i class="fab fa-linkedin"></i></a>
