Updated the linkedIn profile  index.html

--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
                 <p><i class="fas fa-code"></i> Available for freelance projects</p>
                 <div class="social-links">
                     <a href="https://github.com/farizworks" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="https://www.linkedin.com/in/fariz-thiruthi-247b851aa" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="www.linkedin.com/in/muhamed-fariz-thiruthi-ab517a392" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://play.google.com" target="_blank" title="Play Store"><i class="fab fa-google-play"></i></a>
                 </div>
             </div>
